--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
     "test:vitest:coverage": "vitest run --reporter verbose --coverage",
-    "deepClean": "npm --workspaces --if-present run deepClean && npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .cache node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "deepClean": "npm --workspaces --if-present run deepClean && npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .cache/* .cache/.[!.]* .cache/..?* node_modules/* node_modules/.[!.]* node_modules/..?*",
     "reset": "npm run deepClean && npm install --no-fund --no-audit && npm run build && (npm link --no-fund --no-audit|| sudo npm link --no-fund --no-audit) && shx chmod +x bin/*.js",
     "lint": "npm --workspaces --if-present run lint && eslint --cache --cache-location .cache/.eslintcache --max-warnings=0 .",
     "lint:fix": "npm --workspaces --if-present run lint:fix && eslint --cache --cache-location .cache/.eslintcache --fix --max-warnings=0 .",
@@ -213,7 +213,7 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.12.1",
-    "eslint-plugin-jsdoc": "62.0.1",
+    "eslint-plugin-jsdoc": "62.1.0",
     "eslint-plugin-n": "17.23.2",
     "eslint-plugin-prettier": "5.5.5",
     "eslint-plugin-promise": "7.2.1",
