--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -59,7 +59,7 @@ jobs:
           echo "ORIG_SHA=$SHA"    >> $GITHUB_ENV
 
       - name: Bump to date-commit-stamped version --no-git-tag-version tag ${{ env.DEV_TAG }} sha ${{ env.ORIG_SHA }}
-        run: npm version "${{ env.DEV_TAG }}" --no-git-tag-version --no-scripts
+        run: npm version "${{ env.DEV_TAG }}" --no-git-tag-version --ignore-scripts
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
