--- a/.github/workflows/docker-buildx-main.yml
+++ b/.github/workflows/docker-buildx-main.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Run Docker Buildx on latest
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm64,linux/arm/v7 \
+            --platform linux/amd64,linux/arm64 \
             -f docker/Dockerfile.main \
             -t luligu/matterbridge:latest \
             -t luligu/matterbridge:${{ env.VERSION }} \
