--- a/.github/workflows/docker-buildx-alpine.yml
+++ b/.github/workflows/docker-buildx-alpine.yml
@@ -50,12 +50,23 @@ jobs:
         with:
           version: latest
 
+      - name: Extract version from package.json
+        id: extract_version
+        run: |
+          VERSION=$(jq -r '.version' package.json)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Echo main version ${{ env.VERSION }}
+        run: |
+          echo "Extracted version is: ${{ env.VERSION }}"
+
       - name: Run Docker Buildx with Dockerfile.alpine
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
             -f docker/Dockerfile.alpine \
             -t luligu/matterbridge:alpine \
+            -t luligu/matterbridge:alpine-${{ env.VERSION }} \
             --push .
           docker manifest inspect luligu/matterbridge:alpine
         timeout-minutes: 60
