--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
+          cache: npm
 
       - name: Install matterbridge dependencies
         run: npm ci --no-fund --no-audit
