--- a/.github/workflows/docker-buildx-alpine.yml
+++ b/.github/workflows/docker-buildx-alpine.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: '24.x'
           registry-url: 'https://registry.npmjs.org'
+          cache: npm
 
       - name: Stamp build metadata into package.json
         run: |
