Set build.dev flag in workflow files for Docker image builds and publish workflows

--- a/.github/workflows/docker-buildx-alpine.yml
+++ b/.github/workflows/docker-buildx-alpine.yml
@@ -34,6 +34,7 @@ jobs:
           npm pkg set build.type="${GITHUB_REF_TYPE}"
           npm pkg set build.name="${GITHUB_REF_NAME}"
           npm pkg set build.docker="true"
+          npm pkg set build.dev="false"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
