--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,6 +49,7 @@ jobs:
           npm pkg set build.type="${GITHUB_REF_TYPE}"
           npm pkg set build.name="${GITHUB_REF_NAME}"
           npm pkg set build.docker="false"
+          npm pkg set build.dev="false"
 
       - name: Publish to npm
         run: npm publish
